# rustic-knights

./: .eslintrc.js  .gitignore  LICENSE  README.md  TODO.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: ci.yml
assets/: diagram.drawio
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/ai/: mod.rs
backend/src/ai/models/: mod.rs
backend/src/ai/models/reinforcement/: mod.rs
backend/src/db/: mod.rs  mongodb.rs
backend/src/handlers/: auth.rs  game.rs  middleware.rs  mod.rs  websocket.rs
backend/src/models/: game_session.rs  mod.rs  user.rs
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/public/assets/chess_pieces/: license.txt  scene.gltf
frontend/src/: App.css  App.tsx  index.html  index.js  index.ts  index.tsx  style.css  theme.css
frontend/src/components/: GameView.tsx  LoginForm.tsx  MainMenu.tsx  PauseMenu.tsx  RegisterForm.tsx
frontend/src/components/game/: Board.ts  Pieces.ts
frontend/src/game/: Board.ts  ChessGame.ts  Pieces.ts
frontend/src/game/elements/: Board.ts  GameScene.ts  Piece.ts  Pieces.ts  Square.ts
frontend/src/game/meshes/: bishop.ts  index.ts  king.ts  knight.ts  pawn.ts  queen.ts  rook.ts
frontend/src/game/networking/: GameSocket.ts  types.ts
frontend/src/game/p2p/: GameSocket.ts  Player.ts
frontend/src/scenes/: GameScene.ts
frontend/src/types/: chess.ts  index.ts  player.ts  types.ts  user.ts
frontend/src/util/: AuthContext.tsx  authService.ts  constants.ts
frontend/src/utils/: constants.ts
lore/: stage1.txt
(+4 files in other folders)
