[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix = "0.13"
actix-web = "4.0"
actix-web-actors = "4.1"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2", features = ["v4", "serde"] }
mongodb = { version = "2.3", features = ["bson-uuid-1"] }
futures = "0.3"
env_logger = "0.9"
log = "0.4"
dotenv = "0.15"
bcrypt = "0.13"
jsonwebtoken = "8.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# AI-related dependencies
async-trait = "0.1"
tch = "0.13"        # PyTorch bindings for Rust
ndarray = "0.15"    # Efficient array operations
rand = "0.8"        # For random number generation
